--- a/syllabus-detail.html
+++ b/syllabus-detail.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Syllabus Details - YuvaSarkari</title>
+    <meta id="meta-description" name="description" content="Loading syllabus details...">
+<meta id="meta-keywords" name="keywords" content="sarkari result, syllabus, exam pattern">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
