--- a/page5.html
+++ b/page5.html
@@ -159,7 +159,7 @@
     </div>
 
     <div class="main-content">
-        <img id="profile-pic" src="YOUR_PHOTO.jpg" alt="Happy Birthday Nikki">
+        <!-- <img id="profile-pic" src="YOUR_PHOTO.jpg" alt="Happy Birthday Nikki"> -->
 
         <h1>Happy Birthday, Nikki</h1>
 
